tests/rosetta/out/C/arithmetic-complex.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:44Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct Complex Complex;

typedef struct Complex {
  double re;
  double im;
} Complex;
typedef struct {
  int len;
  complex_t *data;
} complex_list_t;
complex_list_t create_complex_list(int len) {
  complex_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(complex_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

complex_t add(Complex *a, Complex *b) {
  return (Complex){.re = a->re + b->re, .im = a->im + b->im};
}

complex_t mul(Complex *a, Complex *b) {
  return (Complex){.re = a->re * b->re - a->im * b->im,
                   .im = a->re * b->im + a->im * b->re};
}

complex_t neg(Complex *a) { return (Complex){.re = (-a->re), .im = (-a->im)}; }

complex_t inv(Complex *a) {
  double denom = a->re * a->re + a->im * a->im;
  return (Complex){.re = a->re / denom, .im = (-a->im) / denom};
}

complex_t conj(Complex *a) { return (Complex){.re = a->re, .im = (-a->im)}; }

const char *cstr(Complex *a) {
  char *tmp1 = _str(a->re);
  char *tmp2 = concat_string("(", tmp1);
  const char *s = tmp2;
  if (a->im >= 0) {
    char *tmp3 = concat_string(s, "+");
    char *tmp4 = _str(a->im);
    char *tmp5 = concat_string(tmp3, tmp4);
    char *tmp6 = concat_string(tmp5, "i)");
    s = tmp6;
  } else {
    char *tmp7 = _str(a->im);
    char *tmp8 = concat_string(s, tmp7);
    char *tmp9 = concat_string(tmp8, "i)");
    s = tmp9;
  }
  return s;
}

int main() {
  complex_t a = (Complex){.re = 1.0, .im = 1.0};
  complex_t b = (Complex){.re = 3.14159, .im = 1.25};
  printf("%s\n", "a:       " + cstr(&a));
  printf("%s\n", "b:       " + cstr(&b));
  printf("%s\n", "a + b:   " + cstr(&add(&a, &b)));
  printf("%s\n", "a * b:   " + cstr(&mul(&a, &b)));
  printf("%s\n", "-a:      " + cstr(&neg(&a)));
  printf("%s\n", "1 / a:   " + cstr(&inv(&a)));
  printf("%s\n", "a̅:       " + cstr(&conj(&a)));
  return 0;
}
